fixes readability

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,6 +9,7 @@ body {
   background-color: black;
   padding: 50px;
   font-family: "Trebuchet MS", Helvetica, sans-serif;
+  font-size: 25px;
 }
 
 .completed{
